--- a/app/src/main/res/layout/activity_affected_countries.xml
+++ b/app/src/main/res/layout/activity_affected_countries.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/color_white"
+    android:background="#EDEDED"
     android:layout_height="match_parent"
     tools:context=".AffectedCountries">
 
@@ -21,7 +21,7 @@
         android:drawablePadding="15dp"
         android:background="@drawable/edittext_shadow"
         android:drawableRight="@drawable/ic_search_black_24dp"/>
-   
+
   <ListView
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
