--- a/app/src/main/res/layout/list_custom_item.xml
+++ b/app/src/main/res/layout/list_custom_item.xml
@@ -5,25 +5,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:orientation="horizontal">
 
     <ImageView
+        android:id="@+id/imageFlag"
         android:layout_width="80dp"
         android:layout_height="55dp"
-        android:id="@+id/imageFlag"
         android:padding="5dp"
-        />
+        android:contentDescription="TODO" />
 
     <TextView
+        android:id="@+id/tvCountryNames"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tvCountryNames"
         android:layout_gravity="center_vertical"
+        android:paddingStart="15dp"
+        android:paddingLeft="15dp"
         android:text="Country Name"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:paddingLeft="15dp">
+        android:textStyle="bold">
 
     </TextView>
 
