--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -97,7 +97,7 @@
                     <View
                         android:layout_width="25dp"
                         android:layout_height="match_parent"
-                        android:background="@color/color_one" />
+                        android:background="@color/colorPrimary" />
 
                     <TextView
                         android:layout_width="88dp"
@@ -105,7 +105,7 @@
                         android:paddingLeft="10dp"
                         android:text="Deaths"
                         android:textStyle="bold"
-                        android:textColor="@color/color_one"
+                        android:textColor="@color/colorPrimaryDark"
                         android:textSize="17dp" />
 
                 </LinearLayout>
