--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@color/color_white"
     tools:context=".MainActivity"
     android:backgroundTint="#981414">
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewGraph"
@@ -20,12 +22,14 @@
         app:cardCornerRadius="15dp"
         app:cardElevation="10dp">
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="176dp"
             android:background="#FFFFFF"
             android:orientation="horizontal"
             android:weightSum="2">
+
 
             <org.eazegraph.lib.charts.PieChart
                 android:id="@+id/piechart"
@@ -36,6 +40,8 @@
                 android:layout_marginBottom="15dp"
                 android:layout_weight="1"
                 android:padding="5dp" />
+
+
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -518,5 +524,5 @@
         android:textSize="16sp"
         android:padding="5dp"
         android:onClick="goTrackCountries"/>
-    
+
 </RelativeLayout>
